force-app/main/default/objects/CallCenterPriority__c/CallCenterPriority__c.object-meta.xml
<CustomObject>
    <label>Call Center Priority</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Call Center Priroties Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Center Priorities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>