force-app/main/default/objects/CallCenterPriority__c/fields/CallCenterCampaign__c.field-meta.xml
<CustomField>
    <fullName>CallCenterCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Center Campaign</label>
    <referenceTo>CallCenterCampaign__c</referenceTo>
    <relationshipLabel>Call Center Priorities</relationshipLabel>
    <relationshipName>Call_Center_Priorities</relationshipName>
    <type>Lookup</type>
</CustomField>