force-app/main/default/objects/CallCenterPriority__c/fields/ConsiderSurveyResponseinUserAddress__c.field-meta.xml
<CustomField>
    <fullName>ConsiderSurveyResponseinUserAddress__c</fullName>
    <label>Consider Survey Response in UserAddress?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>