force-app/main/default/objects/CallCenterPriority__c/fields/DailyCallCount__c.field-meta.xml
<CustomField>
    <fullName>DailyCallCount__c</fullName>
    <label>Daily Call Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>