force-app/main/default/objects/CallCenterPriority__c/fields/OBCMMatchingInventories__c.field-meta.xml
<CustomField>
    <fullName>OBCMMatchingInventories__c</fullName>
    <label>OBCM Matching Inventories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>