force-app/main/default/objects/CallCenterPriority__c/fields/OBCMUnMatchingInventories__c.field-meta.xml
<CustomField>
    <fullName>OBCMUnMatchingInventories__c</fullName>
    <label>OBCM UnMatching Inventories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>