force-app/main/default/objects/CallCenterPriority__c/fields/Priorityforrecentresponddate__c.field-meta.xml
<CustomField>
    <fullName>Priorityforrecentresponddate__c</fullName>
    <label>Priority for recent respond date?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>