force-app/main/default/objects/CallCenterPriority__c/fields/RespondDateMaximumRange__c.field-meta.xml
<CustomField>
    <fullName>RespondDateMaximumRange__c</fullName>
    <label>Respond Date Maximum Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>