force-app/main/default/objects/CallCenterPriority__c/fields/RespondDateMinRange__c.field-meta.xml
<CustomField>
    <fullName>RespondDateMinRange__c</fullName>
    <label>Respond Date Minimum Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>